# samplo-clap

./: Cargo.toml  README.md
.github/workflows/: aur-upload.yml  ci.yml  release.yml
packaging/: org.freedesktop.LinuxAudio.Plugins.Samplo.metainfo.xml  samplo.desktop
src/: dsp.rs  lib.rs  loader.rs  params.rs  presets.rs  sample.rs  sfz.rs  voice.rs
