[package]
name = "samplo"
version = "1.2.4"
edition = "2024"
license = "MIT"
authors = ["mlm-games"]
description = "Samplo: minimal Rust CLAP sampler"
repository = "https://github.com/mlm-games/samplo-clap"
readme = "README.md"
categories = ["multimedia::audio", "multimedia::audio::plugins"]
keywords = ["clap", "sampler", "audio", "android", "nih-plug"]

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "6.0.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

symphonia = { version = "0.5", default-features = false, features = [
    "wav",
    "flac",
    "ogg",
    "vorbis",
    "pcm",
    "adpcm",
] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"
panic = "abort"
